--- a/blog/app.yaml
+++ b/blog/app.yaml
@@ -11,3 +11,11 @@ handlers:
 libraries:
 - name: jinja2
   version: latest
+
+skip_files:
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\..*$
+- example_auth.cfg
